--- a/src/main/webapp/brand.html
+++ b/src/main/webapp/brand.html
@@ -44,17 +44,16 @@
 
     <el-row>
 
-        <el-button type="danger" plain>批量删除</el-button>
+        <el-button type="danger" plain v-on:click="deleteByIds">批量删除</el-button>
         <el-button type="primary" plain @click="dialogVisible = true">新增</el-button>
 
     </el-row>
     <!--添加数据对话框表单-->
     <el-dialog
-            title="编辑品牌"
+            title="新增品牌"
             :visible.sync="dialogVisible"
             width="30%"
             >
-
         <el-form ref="form" :model="brand" label-width="80px">
             <el-form-item label="品牌名称">
                 <el-input v-model="brand.brandName"></el-input>
@@ -78,16 +77,47 @@
                            inactive-value="0"
                 ></el-switch>
             </el-form-item>
-
-
             <el-form-item>
-                <el-button type="primary" @click="addBrand">提交</el-button>
+                <el-button type="primary" @click="addBrand()">提交</el-button>
                 <el-button @click="dialogVisible = false">取消</el-button>
             </el-form-item>
         </el-form>
-
     </el-dialog>
 
+    <!--修改数据 对话框表单-->
+    <el-dialog
+            title="修改品牌"
+            :visible.sync="updateDialogVisible"
+            width="30%"
+    >
+        <el-form ref="form" :model="brand" label-width="80px">
+            <el-form-item label="品牌名称">
+                <el-input v-model="brand.brandName"></el-input>
+            </el-form-item>
+            <el-form-item label="企业名称">
+                <el-input v-model="brand.companyName"></el-input>
+            </el-form-item>
+
+            <el-form-item label="排序">
+                <el-input v-model="brand.ordered"></el-input>
+            </el-form-item>
+
+            <el-form-item label="备注">
+                <el-input type="textarea" v-model="brand.description"></el-input>
+            </el-form-item>
+
+            <el-form-item label="状态">
+                <el-switch v-model="brand.status"
+                           active-value="1"
+                           inactive-value="0"
+                ></el-switch>
+            </el-form-item>
+            <el-form-item>
+                <el-button type="primary" @click="update()">提交</el-button>
+                <el-button @click="updateDialogVisible = false">取消</el-button>
+            </el-form-item>
+        </el-form>
+    </el-dialog>
 
     <!--表格-->
     <template>
@@ -128,13 +158,12 @@
                     align="center"
                     label="当前状态">
             </el-table-column>
-
             <el-table-column
                     align="center"
                     label="操作">
 
                 <el-row>
-                    <el-button type="primary">修改</el-button>
+                    <el-button type="primary" v-on:click="updateDialogVisible = true">修改</el-button>
                     <el-button type="danger">删除</el-button>
                 </el-row>
 
@@ -151,7 +180,7 @@
             :page-sizes="[5, 10, 15, 20]"
             :page-size="5"
             layout="total, sizes, prev, pager, next, jumper"
-            :total="400">
+            :total="totalCount">
     </el-pagination>
 
 </div>
@@ -170,14 +199,24 @@
             this.selectAll();
         },
         methods: {
-            //查询所有数据
             selectAll(){
+                /*var _this=this;
+                axios({
+                    method:"get",
+                    url:"http://localhost:8080/brand-case/brand/selectAll"
+                }).then(function (resp) {
+                    _this.tableData = resp.data;
+                })*/
+                //查询分页数据
                 var _this=this;
                 axios({
                     method:"get",
-                    url:"http://localhost:8080/brand-case/selectAllServlet"
+                    url:"http://localhost:8080/brand-case/brand/selectByPage?currentPage="+_this.currentPage+"&pageSize="+_this.pageSize+""
                 }).then(function (resp) {
-                    _this.tableData = resp.data;
+                    //每页显示数据
+                    _this.tableData = resp.data.rows;    //{rows:[],totalCount:11}
+                    //数据总条数
+                    _this.totalCount = resp.data.totalCount;
                 })
             },
             tableRowClassName({row, rowIndex}) {
@@ -191,7 +230,6 @@
             // 复选框选中后执行的方法
             handleSelectionChange(val) {
                 this.multipleSelection = val;
-
                 console.log(this.multipleSelection)
             },
             // 查询方法
@@ -204,38 +242,101 @@
                 var _this=this;
                 axios({
                     method:"post",
-                    url:"http://localhost:8080/brand-case/addServlet",
+                    url:"http://localhost:8080/brand-case/brand/add",
                     data:_this.brand
                 }).then(function (resp){
                     //添加成功，给出提示，返回原界面
                     if(resp.data=="success") {
                         _this.dialogVisible = false;
-
+                            //给出提示
                             _this.$message({
                                 message: '恭喜你，添加成功',
                                 type: 'success'
                             });
+                            //重新加载界面
                         _this.selectAll();
                     }
                 })
             },
-
-            //分页
+            //修改数据
+            update(){
+                //1.获取选中数据的id
+                var _this=this;
+                axios({
+                    method:"post",
+                    url:"http://localhost:8080/brand-case/brand/update",
+                    data:_this.brand
+                }).then(function (resp){
+                    //添加成功，给出提示，返回原界面
+                    if(resp.data=="success") {
+                        _this.updateDialogVisible = false;
+                        //给出提示
+                        _this.$message({
+                            message: '恭喜你，修改成功',
+                            type: 'success'
+                        });
+                        //重新加载界面
+                        _this.selectAll();
+                    }
+                })
+            },
+            deleteByIds: function () {
+                /*brandName: "华为"
+                companyName: "华为技术有限公司"
+                description: "万物互联"
+                id: 1
+                ordered: 100
+                status: 1
+                statusStr: "启用"
+                */
+                //1.创建id数组，从multipleSelection中获取
+                for (let i = 0; i < this.multipleSelection.length; i++) {
+                  let selecttionElement =  this.multipleSelection[i];
+                  this.selectIds[i]=selecttionElement.id;
+                }
+                var _this=this;
+                //2.发送ajax请求
+                axios({
+                    method: "post",
+                    url: "http://localhost:8080/brand-case/brand/deleteByIds",
+                    data:this.selectIds
+                }).then(function (resp) {
+                    //删除成功给出提示
+                    if(resp.data=="success") {
+                        _this.$message({
+                            message: '恭喜你，删除成功',
+                            type: 'success'
+                        });
+                        //加载界面
+                        _this.selectAll();
+                    }
+                })
+                // console.log(this.multipleSelection)
+            },
+            //分页 函数
             handleSizeChange(val) {
-                console.log(`每页 ${val} 条`);
+                // console.log(`每页 ${val} 条`);
+                this.pageSize = val;    //更新每页显示条数
+                this.selectAll();
+
             },
             handleCurrentChange(val) {
-                console.log(`当前页: ${val}`);
+                // console.log(`当前页: ${val}`);
+                this.currentPage=val;   //更新当前页码
+                this.selectAll();
             }
 
         },
         data() {
             return {
+                //每页显示的条数
+                pageSize:5,
                 // 当前页码
-                currentPage: 4,
+                currentPage: 1,
                 // 添加数据对话框是否展示的标记
                 dialogVisible: false,
-
+                //删除数据对话框是否展示的标记
+                updateDialogVisible:false,
                 // 品牌模型数据
                 brand: {
                     status: '',
@@ -248,27 +349,11 @@
                 // 复选框选中数据集合
                 multipleSelection: [],
                 // 表格数据
-                tableData: [{
-                    brandName: '华为',
-                    companyName: '华为科技有限公司',
-                    ordered: '100',
-                    status: "1"
-                }, {
-                    brandName: '华为',
-                    companyName: '华为科技有限公司',
-                    ordered: '100',
-                    status: "1"
-                }, {
-                    brandName: '华为',
-                    companyName: '华为科技有限公司',
-                    ordered: '100',
-                    status: "1"
-                }, {
-                    brandName: '华为',
-                    companyName: '华为科技有限公司',
-                    ordered: '100',
-                    status: "1"
-                }]
+                tableData: [],
+                //批量删除数组模型
+                selectIds:[],
+                //数据总条数
+                totalCount:1
             }
         }
     })
